--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,9 @@
 @import url(https://fonts.googleapis.com/earlyaccess/cwtexfangsong.css);
 body {
-  font: 22px "cwTeXFangSong", Helvetica, Arial, sans-serif;
+  font-size: 1.2rem;
+    font-family:  "cwTeXFangSong", Helvetica, Arial, sans-serif;
 }
 
-
-header {
-}
 
 section {
     padding: 100px 0px;
@@ -13,7 +11,7 @@ section {
 
 /*title*/
 .section-title {
-    font-size: 44px;
+    font-size: 3rem;
     color: #272727;
     text-transform: uppercase;
     position: relative;
@@ -47,20 +45,6 @@ section {
 
 /*member*/
 
-/*
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #555;
-}
-*/
 
 .card-img-overlay{
     display: inline;
@@ -74,9 +58,38 @@ section {
     background-color: rgb(30, 136, 168, 0.8);
 }
 
+
+.card{
+    max-width: 490px;
+}
+
 .card img{
+    max-width: 490px;
     height: 20rem;
     object-fit: cover;
+}
+
+
+#member p{
+    font-size: 1rem;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .card{
+        margin-bottom: 20px;
+    }
+}
+
+
+
+/*footer*/
+
+footer {
+    font-size: 1rem;
+    color: #fff;
+    background: #006284 none repeat scroll 0% 0%;
+    padding: 30px 0px;
 }
 
 
