--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -92,6 +92,13 @@ footer {
     padding: 30px 0px;
 }
 
-
+/*scroll to top*/
+#toTop{
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	cursor: pointer;
+	display: none;
+}
 
 
