--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,7 @@ section {
     color: #272727;
     text-transform: uppercase;
     position: relative;
+    padding-bottom: 20px;
     margin-bottom: 80px;
 }
 
@@ -102,3 +103,29 @@ footer {
 }
 
 
+/*Caroline note css*/
+#note a:link, a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+#note a:hover, a:active {
+    color: #777;
+}
+
+#note h2{
+    padding-bottom: 10px;
+    margin: 50px 0px 10px 0px;
+    text-align: center;
+    border-bottom: 3px #eee solid;
+}
+#note h3{
+    margin: 30px 0px 20px 0px;;
+}
+
+#note pre code{
+    display: block;
+    background: #eee;
+    padding: 20px;
+    border-radius: 5px;
+}
